5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1582_994.log
== TEST (2019-03-12 16:53:08) 
-- CODE:
print(Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:55:21) 
-- CODE:
print(universidade federal do amazonas)
-- ERROR:
File "XXXX", line 1
    print(universidade federal do amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:55:46) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:56:00) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:01:38) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:02:22) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:05:02) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:05:38) 
-- CODE:
print("%Universidade Federal do Amazonas")
-- OUTPUT:
%Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:05:44) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:07:28) 
-- CODE:
print(Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:07:36) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:08:26) 
-- CODE:
print(*Universidade Federal do Amazonas*)
-- ERROR:
File "XXXX", line 1
    print(*Universidade Federal do Amazonas*)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:08:40) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:08:48) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:09:02) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.131261
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:39:34) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.242184
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:55:15) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.186047
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:26:06) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.150086
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:36:40) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.202758
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:42:05) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.130682
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:56:31) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.148639
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:45:23) 
-- CODE:
a = 10	
b = 7
c = 15
a = b 	
b = c
a = b * a
c = (a - b) / b
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:45:26) 
-- CODE:
a = 10	
b = 7
c = 15
a = b 	
b = c
a = b * a
c = (a - b) / b
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:45:27) 
-- CODE:
a = 10	
b = 7
c = 15
a = b 	
b = c
a = b * a
c = (a - b) / b
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:46:08) 
-- CODE:
a = 10	
b = 7
c = 15
print(a = b)	
print(b = c)
a = b * a
c = (a - b) / b
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a = b)	
TypeError: 'a' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:46:20) 
-- CODE:
a = 10	
b = 7
c = 15
print("a = b)	
print(b = c)
a = b * a
c = (a - b) / b
-- ERROR:
File "XXXX", line 4
    print("a = b)	
                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:46:21) 
-- CODE:
a = 10	
b = 7
c = 15
print("a = b)	
print(b = c)
a = b * a
c = (a - b) / b
-- ERROR:
File "XXXX", line 4
    print("a = b)	
                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:46:43) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:51:40) 
-- CODE:
a = 10	
b = 7
c = 15
print(a = b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a = b)
TypeError: 'a' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:51:57) 
-- CODE:
a = 10	
b = 7
c = 15
print(b * a)
-- OUTPUT:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:53:05) 
-- CODE:
a = 10	
b = 7
c = 15
print(b * a)
print(b * a - b / b)
-- OUTPUT:
70
69.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:53:39) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c

print(b * a - b / b)
-- OUTPUT:
104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:53:41) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c

print(b * a - b / b)
-- EXECUTION TIME:
0.167171
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
104.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:53:42) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c

print(b * a - b / b)
-- OUTPUT:
104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:53:57) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print(b * a - b / b)
-- OUTPUT:
1574.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:53:59) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print(b * a - b / b)
-- OUTPUT:
1574.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:54:00) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print(b * a - b / b)
-- OUTPUT:
1574.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:54:08) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print(a - b / b)
-- OUTPUT:
104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:54:09) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print(a - b / b)
-- OUTPUT:
104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:54:29) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print(a - b / b)
-- OUTPUT:
104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:56:28) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print(a - b / b)
-- OUTPUT:
104.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:57:07) 
-- CODE:
a = 10	
b = 7
c = 15

a = b
b = c
a = b * a
print((a - b) / b)
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:02:05) 
-- CODE:
print(verdadeiro e falso)verdadeiro
-- ERROR:
File "XXXX", line 1
    print(verdadeiro e falso)verdadeiro
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:02:18) 
-- CODE:
print("verdadeiro e falso)verdadeiro"
-- ERROR:
File "XXXX", line 2
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:38) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:40) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:41) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:42) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:43) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:43) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:44) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:44) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:44) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:44) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:44) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:44) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:45) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:45) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:45) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:05:45) 
-- CODE:
resposta1 = (verdadeiro e falso) ou verdadeiro	
resposta2 = falso ou (verdadeiro e falso)
print(não(resposta1 e reposta2))
-- ERROR:
File "XXXX", line 1
    resposta1 = (verdadeiro e falso) ou verdadeiro	
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:19:15) 
-- CODE:
x = 6	
y = 5
print (y > = x)
-- ERROR:
File "XXXX", line 3
    print (y > = x)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:19:21) 
-- CODE:
x = 6	
y = 5
print (y = x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (y = x)
TypeError: 'y' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 13:28:06) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 14:59:16) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 14:59:21) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.143512
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:08:40) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.153476
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:53:02) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.136131
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:00:27) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.207254
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:02:32) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.174509
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:53:14) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.150391
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:00:48) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.129738
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:23:15) 
-- CODE:
a = input()
if a = true
-- ERROR:
File "XXXX", line 2
    if a = true
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:23:27) 
-- CODE:
a = input()
if = true
-- ERROR:
File "XXXX", line 2
    if = true
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:23:34) 
-- CODE:
a = input()
if(a) = true
-- ERROR:
File "XXXX", line 2
    if(a) = true
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:23:50) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:23:53) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.138944
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
